--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,14 @@
 :root {
   --accent: #009eae;
   --accent-light: #edf7f8;
-  --light: rgb(240, 255, 254);
+  --light: rgb(255, 255, 255);
   --grey: #8d919b;
+  --middle-radius: 5rem;
+  --small-radius: 1.5rem;
+}
+
+html {
+  font-size: 16px;
 }
 
 * {
@@ -33,13 +39,20 @@ a {
 }
 
 button {
+  border-style: solid;
   border-color: black;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 
 .fa-solid {
   text-decoration: none;
 }
+
+
 /*
 BLOCK page
 */
@@ -51,23 +64,20 @@ BLOCK page
   min-height: 100vh;
 }
 
-.page__sidebar {
-  background-color: var(--accent);
-}
 
-.page__content {
-  background-color: var(--accent-light);
-}
+
+
 
 /*
 BLOCK navigation
 */
 .navigation {
+  grid-column: 1 / 2;
   display: flex;
   flex-direction: column;
-  position: fixed;
-  width: 6rem;
-  height: 100vh;
+  /* width: 6rem; */
+  /* height: 100vh; */
+  background-color: var(--accent);
 }
 
 .navigation__list {
@@ -78,18 +88,18 @@ BLOCK navigation
 }
 
 .navigation__item {
-  width: 50%;
+  width: 65%;
   margin: auto;
-  padding: 0rem 0;
+  padding: 0.5rem 0;
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 1rem;
   margin-top: 2rem;
 }
 
 .navigation__item a {
   display: block;
   color: white;
-  font-size: 1.2rem;
+  font-size: 2rem;
   margin-bottom: 0.5rem;
   margin-top: 0.5rem;
 
@@ -121,12 +131,9 @@ BLOCK navigation
 
 .powered-by {
   align-self: center;
-  color: white;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 0rem 1rem;
+  width: 80%;
+  margin-top: auto;
+  padding-bottom: 2rem;
 }
 
 .powered-by__text {
@@ -147,6 +154,8 @@ BLOCK Patient
 */
 
 .patient {
+  grid-column: 2 / 3;
+  /* width: 15rem; */
   background-color: var(--accent-light);
 }
 
@@ -170,13 +179,13 @@ BLOCK Patient
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   padding: 1.2rem 0;
-  font-weight: 300;
 }
 
 .patient__record {
   background-color: white;
   border-radius: 1rem;
   padding: 0.8rem 1.5rem;
+  box-shadow: 0 0 15px -10px #858585;
 }
 
 .record__item {
@@ -229,16 +238,27 @@ BLOCK Patient
 
 
 /*
+***********
 Main Page
+***********
 */
 
 .main {
+  grid-column: 3 / 4;
   background-color: var(--light);
+  width: 100%;
+  box-shadow: -10px -2px 4px -13px #000000;
 }
 
 .main__content {
   padding: 3rem;
 }
+
+
+/*
+--Main--
+  header
+*/
 
 .main__header {
   display: flex;
@@ -286,7 +306,10 @@ Main Page
 
 
 /*
-***************
+****
+--Main--
+  section findings
+****
 */
 
 .findings {
@@ -299,14 +322,20 @@ Main Page
 .playlist-area {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
+/*
+BLOCK Playlist
+*/
+
 .playlist {
-  padding: 1rem 1.5rem ;
+  padding: 3rem 2.5rem ;
   background-color: white;
   border-radius: 1rem;
-  width: 48%;
-  box-shadow: 0 0 8px -3px #404040;
+  /* width: 48%; */
+  box-shadow: 0 0 15px -10px #858585;
+  margin-bottom: 1rem;
 }
 
 
@@ -331,6 +360,10 @@ Main Page
   font-weight: 300;
 }
 
+.playlist__item-text strong {
+  display: block;
+}
+
 .playlist__button {
   display: block;
   padding: 0.5rem 2.5rem;
@@ -341,12 +374,18 @@ Main Page
   border-color: var(--accent);
 }
 
+.playlist__button:hover, .treatment__button:hover{
+  background-color: var(--accent);
+  color: white;
+  transition: 0.3s ease-in-out;
+}
 
 /*
-*********************
+--Main--
+  section findings-selection
 */
 
-.selection {
+.findings-selection {
   padding: 2rem 0;
   margin-top: 1.5rem;
   border-top: solid var(--accent);
@@ -368,10 +407,8 @@ Main Page
   background-position-x: 1rem;
 }
 
-
 .selection__buttons {
   padding: 2rem;
-
 }
 
 
@@ -407,11 +444,154 @@ Main Page
   padding: 1rem 1rem 1rem 0;
 }
 
-.filter-treatment-type {
+/* .filter-treatment-type {
 
 }
 
 .selection__tags {
 
+} */
+
+/*
+--Main--
+  section treatment-selection
+*/
+
+.treatment-selection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  justify-items: center;
+
 }
 
+/*
+BLOCK treatment
+*/
+
+.treatment {
+  padding: 1rem;
+  margin: 1rem 0.25rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 15px -10px #858585;
+}
+
+.treatment__image-box {
+  display: grid;
+  grid-template-columns: 3rem auto 5rem auto 3rem;
+  grid-template-rows: 3rem auto 5rem auto 3rem;
+  height: auto;
+  width: auto;
+  margin: 0.5rem auto 1 auto;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.teeth-img {
+  grid-area: 1/1/-1/-1;
+  width: 100%;
+  height: 100%;
+  z-index: 59;
+}
+
+.middle-icon {
+  justify-self: center;
+  align-self: center;
+  grid-column: 3 / span 1;
+  grid-row: 3 / span 1;
+  z-index: 60;
+  width: var(--middle-radius);
+  height: var(--middle-radius);
+  border-radius: 100%;
+  background: rgba(255, 255, 255, 0.4) ;
+  /* opacity: 0.4; */
+}
+
+.fa-arrow-rotate-right, .fa-play {
+  justify-self: center;
+  align-self: center;
+  color: white;
+  grid-column: 3 / span 1;
+  grid-row: 3 / span 1;
+  z-index: 61;
+}
+
+
+/* .fa-check {
+  grid-column: -3 / span 2;
+  grid-row: -2 / span 1;
+  z-index: 60;
+} */
+
+/* .check-icon {
+  justify-self: center;
+  align-self: center;
+  grid-column: -2 / span 1;
+  grid-row: -2 / span 1;
+  z-index: 60;
+  width: var(--small-radius);
+  height: var(--small-radius);
+  border: solid lightgreen;
+  border-radius: var(--small-radius);
+} */
+
+.fa-check {
+  display: inline-block;
+  grid-column: -2 / span 1;
+  grid-row: -2 / span 1;
+  z-index: 60;
+  align-self: center;
+  justify-self: center;
+  color: white;
+  border: solid lightgreen;
+  padding: 0.3rem 0.35rem;
+  border-radius: 100%;
+}
+
+.fa-star {
+  grid-column: -2 / span 1;
+  grid-row: 1 / span 1;
+  z-index: 60;
+  justify-self: end;
+  align-self: center;
+  color: red;
+  margin: 0 0.5rem;
+}
+
+
+.treatment__description {
+  margin: 0.5rem 0;
+}
+
+.treatment__detail {
+  margin: 0.5rem 0;
+}
+
+
+.treatment__button {
+  display: block;
+  padding: 0.5rem 2.5rem;
+  margin: 1rem auto 0.5rem auto;
+  color: var(--accent);
+  background-color: transparent;
+  border-radius: 0.5rem;
+  border-color: var(--accent);
+  width: 100%;
+}
+
+
+
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem 0;
+}
+
+.footer a {
+  padding: 0 0.5rem;
+  text-decoration: none;
+  margin-bottom: 2rem;
+  font-weight: 300;
+}
